--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,8 @@
 /* место для вашего кода */
+header__menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 391.48px;
+    height: 22px;
+}
