--- a/styles/style.css
+++ b/styles/style.css
@@ -120,6 +120,7 @@
 
 .bet-button {
     font-size: 22px;
+    font-family: Raleway;
     font-weight: 500;
     line-height: 25.83px;
     text-transform: uppercase;
