--- a/styles/global.css
+++ b/styles/global.css
@@ -5,8 +5,8 @@
 }
 
 body {
-  min-width: 1100px;
-  max-width: 1440px;
+  width: 1100px;
+  /*max-width: 1440px;*/
   margin: 0 auto;
   font-family: Raleway, sans-serif;
 }
