--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,11 @@
-.header {
-    font-size: 18px;
-    font-weight: 400;
-    padding: 92px 50px 96px;
+.header {    
+    padding: 92px 24px 96px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
-    max-width: 1340px;
+    align-items: center;    
+    font-size: 18px;
+    font-weight: 400;
 }
 
 .header__menu {
@@ -48,61 +47,71 @@
 }
 
 .header__address {
-    padding-left: 230px;
+    padding-left: 184px;
 }
 
 .address {
     flex: 0 0 auto;
-    width: 33.3%;
+    width: 40%;
     line-height: 24.3px;
     font-style: normal;
     text-underline-position: under;
 }
 
 .cover {
+    position: relative;
     padding: 165px 50px 50px;
     background: url("../images/cover.jpg") center/cover; 
     color: #fff;   
 }
 
 .cover__title {
-    font-size: 100px;
-    font-weight: 700;
-    letter-spacing: 0.3em;
-    text-transform: uppercase;
+    position: relative;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    row-gap: 20px;
+    font-size: 100px;
+    font-weight: 700;
+    line-height: 100%;
+    letter-spacing: 0.3em;
+    text-transform: uppercase;    
 }
 
 .cover__description {
-    margin-top: 120px;
+    position: relative;
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     align-items: center;
+    margin-top: 135px;
 }
 
 .cover__description-text {
+    margin-left: 28px;
     font-size: 22px;
     font-weight: 400;
     line-height: 28px;
-    text-transform: uppercase;
-    text-align: end;
-    margin-right: 6%;
-    word-spacing: 17.5px;
+    text-transform: uppercase;    
+    word-spacing: 0.84em;
 }
 
-.overlay {  
+.overlay {
+    position: absolute; 
+    inset: 0;
+    width: 100%;
+    height: 100%; 
     background-color: rgba(0, 0, 0, 0.6);
 }
 
 .aligned-text {
-    text-align: left;
+    display: block;
+}
+
+.aligned-text_left {    
+    line-height: 115px;
 }
 
 .aligned-text_center {
-    width: 100%;
-    max-width: 1310px;
+    margin-left: -30px;    
     text-align: center;
 }
 .aligned-text_right {
@@ -118,13 +127,16 @@
 }
 
 .bet-button {
+    padding: 12px 32px;
+    border: 1px solid #fff;
+    font-family: inherit;
     font-size: 22px;    
     font-weight: 500;
     line-height: 25.83px;
     text-transform: uppercase;
     text-align: center;
-    background: transparent;    
+    background-color: transparent;    
     color: #fff;
-    border: 1px solid #fff;    
-    padding: 12px 32px;
+    
+    
 }
