--- a/styles/style.css
+++ b/styles/style.css
@@ -139,6 +139,89 @@
     color: #fff;      
 }
 
-.card {
+.lots {
+    padding: 179px 24px 146px;
+    width: 1052px;
+    height: 692px;
+}
+
+.lots__heading {
+    padding: 0 891px 27px 40px;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 46.96px;
+    text-transform: uppercase;
+}
+
+.lots__card-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    column-gap: 25px;
+    list-style: none;    
+}
+
+.lots__card-list-item {
+    flex: 1 0 0;
+    height: 563px;
+    width: 334px;
+}
+
+.lots__look-more-link {
+    border-bottom: 1px solid #000;
+    margin-top: 30px;
+    margin-left: 40px;
+    text-transform: lowercase;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 23.48px;
+}
+
+.card {    
     position: relative;
+    height: inherit;
+    color: #fff;
+}
+
+.card_type_film {
+    background: url(../images/card-lot-01.jpg) center/cover;
+}
+
+.card_type_book {
+    background: url(../images/card-lot-02.jpg) center/cover;
+}
+
+.card_type_picture {
+    background: url(../images/card-lot-03.jpg) center/cover;
+}
+
+.card-link {
+    height: 100%;
+    text-decoration: none;
+}
+
+.card__title {
+    display: flex;
+    align-items: start;
+    padding-top: 51px;
+    padding-left: 40px;
+    padding-right: 40px;    
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 26.4px;    
+    text-transform: uppercase;
+    text-decoration: underline;
+}
+
+.card__text {
+    display: flex;
+    align-items: end;
+    padding-right: 40px;
+    margin-bottom: 48px;
+    padding-left: 40px;    
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;    
+
 }
