--- a/styles/style.css
+++ b/styles/style.css
@@ -222,6 +222,12 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
-    text-align: left;    
+    text-align: left;
+}
 
+.about {
+    padding: 146px 24px;
+    display: grid;
+    grid-template-columns: 334px 1fr;
+    gap: 25px;
 }
