--- a/styles/style.css
+++ b/styles/style.css
@@ -265,3 +265,60 @@
     font-size: 20px;
     line-height: 24px;
 }
+
+.footer {
+    margin: 180px 26px 88px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-content: start;    
+}
+
+.footer__menu {
+    width: 149px;
+    height: 64px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer__menu-list {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer__menu-list-item {
+    color: #000;
+    list-style: none;
+}
+
+.footer__menu-link_active {
+    text-decoration: none;
+}
+
+.footer__menu-link {
+    text-decoration: underline;
+}
+
+.footer__social-list {
+    width: 240px;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    gap: 48px;
+}
+
+.footer__social-list-item {
+    list-style: none;    
+}
+
+.footer__social-link {
+    text-decoration: none;    
+}
+
+.footer__social-icon {
+    width: 48px;
+    height: 48px;
+}
