--- a/styles/style.css
+++ b/styles/style.css
@@ -267,7 +267,7 @@
 }
 
 .footer {
-    margin: 180px 26px 88px;
+    margin: 180px 51px 88px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -277,15 +277,20 @@
 
 .footer__menu {
     width: 149px;
-    height: 64px;
+    height: 66px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
 .footer__menu-list {
-    display: flex;
-    flex-direction: column;
+    display: flex;    
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21px;
     text-align: center;
+    text-transform: lowercase;    
 }
 
 .footer__menu-list-item {
@@ -298,7 +303,8 @@
 }
 
 .footer__menu-link {
-    text-decoration: underline;
+    text-decoration: none;
+    border-bottom: 1px solid #000;
 }
 
 .footer__social-list {
@@ -319,6 +325,5 @@
 }
 
 .footer__social-icon {
-    width: 48px;
-    height: 48px;
+    width: 48px;    
 }
