--- a/styles/style.css
+++ b/styles/style.css
@@ -1,329 +1,341 @@
-.header {    
-    margin: 92px 24px 96px;
-    padding: 0 28px 0 26px;
-    display: flex;        
-    width: 1052px;
-    height: 105px;
-    font-size: 18px;
-    font-weight: 400;
+/* GENERAL */
+
+.address {
+	width: 235px;
+	height: 98px;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 24px;
+	font-style: normal;
+	text-underline-position: under;
+}
+
+/* HEADER */
+
+.header {
+	margin: 92px 24px 96px;
+	padding: 0 28px 0 26px;
+	display: flex;
+	width: 1052px;
+	height: 105px;
+	font-size: 18px;
+	font-weight: 400;
 }
 
 .header__menu {
-    display: flex;
-    margin-top: 6px;   
+	margin-top: 6px;
+	display: flex;
 }
 
 .header__link {
-    text-underline-position: under;
+	text-underline-position: under;
 }
 
 .header__links-list {
-    display: flex;    
-    align-items: center;
-    gap: 33px;    
+	display: flex;
+	align-items: center;
+	gap: 33px;
 }
 
-.header__links-list-item {    
-    list-style: circle;
+.header__links-list-item {
+	list-style: circle;
 }
 
 .header__links-list-item_no-bullit {
-    list-style: none;
+	list-style: none;
 }
 
 .header__link_active {
-    text-decoration: none;    
+	text-decoration: none;
 }
 
 .header__logo {
-    margin-left: 36px;
-    width: 148px;
-    height: 105px;    
+	margin-left: 36px;
+	width: 148px;
+	height: 105px;
 }
 
 .header__logo-image {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 .header__address {
-    margin: 7px 0 0px 188px;    
+	margin: 7px 0 0px 188px;
 }
 
-.address {    
-    width: 235px;
-    height: 98px;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 24px;
-    font-style: normal;
-    text-underline-position: under;    
-}
+/*  COVER */
 
 .cover {
-    position: relative;
-    padding: 165px 50px 50px;
-    background: url("../images/cover.jpg") no-repeat center/cover; 
-    color: #fff;   
+	position: relative;
+	padding: 165px 50px 50px;
+	background: url("../images/cover.jpg") no-repeat center/cover;
+	color: #fff;
 }
 
 .cover__title {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-    font-size: 100px;
-    font-weight: 700;
-    line-height: 100%;
-    letter-spacing: 0.3em;
-    text-transform: uppercase;    
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	row-gap: 20px;
+	font-size: 100px;
+	font-weight: 700;
+	line-height: 100%;
+	letter-spacing: 0.3em;
+	text-transform: uppercase;
 }
 
 .cover__description {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 135px;
+	position: relative;
+	margin-top: 135px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .cover__description-text {
-    margin-left: 28px;
-    font-size: 22px;
-    font-weight: 400;
-    line-height: 28px;
-    text-transform: uppercase;    
-    word-spacing: 0.84em;
+	margin-left: 28px;
+	font-size: 22px;
+	font-weight: 400;
+	line-height: 28px;
+	text-transform: uppercase;
+	word-spacing: 0.84em;
 }
 
 .overlay {
-    position: absolute; 
-    inset: 0;
-    width: 100%;
-    height: 100%; 
-    background-color: rgba(0, 0, 0, 0.6);
+	position: absolute;
+	inset: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.6);
 }
 
 .aligned-text {
-    display: block;
+	display: block;
 }
 
-.aligned-text_left {    
-    line-height: 115px;
+.aligned-text_left {
+	line-height: 115px;
 }
 
 .aligned-text_center {
-    margin-left: -30px;    
-    text-align: center;
+	margin-left: -30px;
+	text-align: center;
 }
 .aligned-text_right {
-    text-align: right;
+	text-align: right;
 }
 
 .letter-spacing-extended {
-    letter-spacing: 0.6em;
+	letter-spacing: 0.6em;
 }
 
 .no-letter-spacing {
-    letter-spacing: 0;
+	letter-spacing: 0;
 }
 
 .bet-button {
-    padding: 12px 32px;
-    border: 1px solid #fff;
-    font-family: inherit;
-    font-size: 22px;    
-    font-weight: 500;
-    line-height: 25.83px;
-    text-transform: uppercase;
-    text-align: center;
-    background-color: transparent;    
-    color: #fff;      
+	padding: 12px 32px;
+	border: 1px solid #fff;
+	font-family: inherit;
+	font-size: 22px;
+	font-weight: 500;
+	line-height: 25.83px;
+	text-transform: uppercase;
+	text-align: center;
+	background-color: transparent;
+	color: #fff;
 }
 
+/* LOTS */
+
 .lots {
-    padding: 180px 24px 0;
-    margin: 0;    
+	padding: 180px 24px 0;
+	margin: 0;
 }
 
 .lots__heading {
-    padding: 0;
-    margin: 0 0 0 40px;
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 47px;
-    text-transform: uppercase;
+	padding: 0;
+	margin: 0 0 0 40px;
+	font-size: 40px;
+	font-weight: 700;
+	line-height: 47px;
+	text-transform: uppercase;
 }
 
 .lots__card-list {
-    margin: 27px 0 30px 0;
-    display: flex;
-    flex-wrap: wrap;    
-    gap: 25px;
-    list-style: none;    
+	margin: 27px 0 30px 0;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 25px;
+	list-style: none;
 }
 
-.lots__card-list-item {    
-    width: 334px;
-    min-height: 563px;
-    flex-grow: 1;
+.lots__card-list-item {
+	width: 334px;
+	min-height: 563px;
+	flex-grow: 1;
 }
 
-.lots__look-more-link {    
-    margin: 0 0 0 40px;
-    text-transform: lowercase;
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24px;
-    border-bottom: 1px solid #000;
+.lots__look-more-link {
+	margin: 0 0 0 40px;
+	text-transform: lowercase;
+	text-decoration: none;
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 24px;
+	border-bottom: 1px solid #000;
 }
 
 .card-link {
-    display: block;
-    position: relative;
-    height: 100%;
-    text-decoration: none;
+	display: block;
+	position: relative;
+	height: 100%;
+	text-decoration: none;
 }
 
 .card {
-    display: flex;
-    flex-direction: column;    
-    justify-content: space-between;
-    height: 100%;
-    padding: 51px 40px 48px;    
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
+	padding: 51px 40px 48px;
 }
 
 .card_type_film {
-    background: url(../images/card-lot-01.jpg) no-repeat center/cover;
+	background: url(../images/card-lot-01.jpg) no-repeat center/cover;
 }
 
 .card_type_book {
-    background: url(../images/card-lot-02.jpg) no-repeat center/cover;
+	background: url(../images/card-lot-02.jpg) no-repeat center/cover;
 }
 
 .card_type_picture {
-    background: url(../images/card-lot-03.jpg) no-repeat center/cover;
+	background: url(../images/card-lot-03.jpg) no-repeat center/cover;
 }
 
 .card__title {
-    z-index: 1;         
-    font-size: 22px;
-    font-weight: 700;
-    line-height: 26px;    
-    text-transform: uppercase;
-    text-decoration: underline;
-    color: #fff;
+	z-index: 1;
+	font-size: 22px;
+	font-weight: 700;
+	line-height: 26px;
+	text-transform: uppercase;
+	text-decoration: underline;
+	color: #fff;
 }
 
 .card__text {
-    z-index: 1;        
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24px;
-    color: #fff;
+	z-index: 1;
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 24px;
+	color: #fff;
 }
 
+/* ABOUTS */
+
 .abouts {
-    padding: 146px 24px 0;
-    display: grid;
-    grid-template-columns: 334px 1fr;
-    column-gap: 25px;
+	padding: 146px 24px 0;
+	display: grid;
+	grid-template-columns: 334px 1fr;
+	column-gap: 25px;
 }
 
 .about__logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 240px;
-    height: 240px;
-    border-radius: 50%;
-    background-color: #000;
-    margin: 35px 0 0 47px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 240px;
+	height: 240px;
+	border-radius: 50%;
+	background-color: #000;
+	margin: 35px 0 0 47px;
 }
 
 .about__logo-image {
-    width: 148px;
-    height: 114px;
+	width: 148px;
+	height: 114px;
 }
 
 .about__title {
-    margin-top: 137px;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 47px;
-    text-transform: uppercase;    
+	margin-top: 137px;
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 47px;
+	text-transform: uppercase;
 }
 
 .about__text {
-    margin-top: 100px;    
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    max-width: 688px;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
+	margin-top: 100px;
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+	max-width: 688px;
+	font-weight: 400;
+	font-size: 20px;
+	line-height: 24px;
 }
 
+/* FOOTER */
+
 .footer {
-    margin: 180px 51px 88px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-content: start;    
+	margin: 180px 51px 88px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-content: start;
 }
 
 .footer__menu {
-    width: 149px;
-    height: 66px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+	width: 149px;
+	height: 66px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 .footer__menu-list {
-    display: flex;    
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 21px;
-    text-align: center;
-    text-transform: lowercase;    
+	display: flex;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 21px;
+	text-align: center;
+	text-transform: lowercase;
 }
 
 .footer__menu-list-item {
-    color: #000;
-    list-style: none;
+	color: #000;
+	list-style: none;
 }
 
 .footer__menu-link_active {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .footer__menu-link {
-    text-decoration: none;
-    border-bottom: 1px solid #000;
+	text-decoration: none;
+	border-bottom: 1px solid #000;
 }
 
 .footer__social-list {
-    width: 240px;
-    height: 48px;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    gap: 48px;
+	width: 240px;
+	height: 48px;
+	display: flex;
+	flex-direction: row;
+	justify-content: end;
+	gap: 48px;
 }
 
 .footer__social-list-item {
-    list-style: none;    
+	list-style: none;
 }
 
 .footer__social-link {
-    text-decoration: none;    
+	text-decoration: none;
 }
 
 .footer__social-icon {
-    width: 48px;    
+	width: 48px;
 }
