--- a/styles/style.css
+++ b/styles/style.css
@@ -137,7 +137,7 @@
 .bet-button {
 	padding: 12px 32px;
 	border: 1px solid #fff;
-	font-family: inherit;
+	font-family: Raleway, sans-serif;
 	font-size: 22px;
 	font-weight: 500;
 	line-height: 25.83px;
