--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,7 @@
 /* GENERAL */
 
 .address {
-	width: 235px;
-	height: 98px;
+	width: 235px;	
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 24px;
@@ -14,16 +13,15 @@
 
 .header {
 	margin: 92px 24px 96px;
-	padding: 0 28px 0 26px;
-	display: flex;
-	width: 1052px;
-	height: 105px;
-	font-size: 18px;
-	font-weight: 400;
+  padding: 0 30px 0 26px;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .header__menu {
-	margin-top: 6px;
+	margin: 6px 0 0 0;
 	display: flex;
 }
 
@@ -50,7 +48,7 @@
 }
 
 .header__logo {
-	margin-left: 36px;
+	padding: 1px 1px 0 6px;
 	width: 148px;
 	height: 106px;
 }
@@ -200,18 +198,19 @@
 	justify-content: space-between;
 	height: 100%;
 	padding: 51px 40px 48px;
+	background: no-repeat center/cover;
 }
 
 .card_type_film {
-	background: url(../images/card-lot-01.jpg) no-repeat center/cover;
+	background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-	background: url(../images/card-lot-02.jpg) no-repeat center/cover;
+	background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-	background: url(../images/card-lot-03.jpg) no-repeat center/cover;
+	background-image: url(../images/card-lot-03.jpg);
 }
 
 .card__title {
@@ -288,12 +287,10 @@
 }
 
 .footer__menu {
-	width: 149px;
-	height: 66px;
+	margin: 0 0 0 6px;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	align-items: center;	
 }
 
 .footer__menu-list {
@@ -319,9 +316,7 @@
 	border-bottom: 1px solid #000;
 }
 
-.footer__social-list {
-	width: 240px;
-	height: 48px;
+.footer__social-list {	
 	display: flex;
 	flex-direction: row;
 	justify-content: end;
